--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body{
     --button-color: #FFFFFF;
     --footer-color: #E7E9FC;
     --link-color: #404BBF;
+    --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .container {
     width: 1158px;
@@ -80,6 +81,7 @@ body{
     display: block;
     padding-top: 24px;
     padding-bottom: 24px; 
+    transition: color var(--transition);
 }
 
 
@@ -102,6 +104,7 @@ body{
     display: block;
     padding-top: 24px;
     padding-bottom: 24px;
+    transition: color var(--transition);
 }
 
 .header-mail:hover, 
@@ -117,6 +120,7 @@ body{
     display: block;
     padding-top: 24px;
     padding-bottom: 24px;
+    transition: color var(--transition);
 }
 
 .header-tel:hover,
@@ -170,6 +174,8 @@ body{
     cursor: pointer;
     margin-top: 40px;
     border: 0;
+    transition-duration: background var(--transition);
+    transition: box-shadow var(--transition)
 }
 
 .button:hover {
@@ -344,10 +350,11 @@ body{
     align-items: center;
     justify-content: center;
     background-color: #4D5AE5;
+    transition: background-color var(--transition);
 }
 .soc-link:hover,
 .soc-link:focus {
-    background: #404BBF;
+    background-color: #404BBF;
 }
 
 .hero-soc-icon {
@@ -391,6 +398,8 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: border-color var(--transition);
+    transition: fill var(--transition);
 }
 
 .custom-link:hover,
@@ -434,6 +443,7 @@ body{
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--logo-second-color);
+
 }
 .footer-logo:hover,
 .footer-logo:focus {
@@ -480,11 +490,12 @@ body{
     align-items: center;
     justify-content: center;
     background-color: rgba(255, 255, 255, 0.1);
+    transition: background-color var(--transition);
 }
 
 .footer-soc-link:hover,
 .footer-soc-link:focus {
-    background: #31D0AA;
+    background-color: #31D0AA;
 }
 
 .footer-soc-icon {
@@ -518,7 +529,10 @@ body{
     color: var(--logo-color);
     background: var(--logo-second-color);
     border: 1px solid #E7E9FC;
-    
+    transition: background-color var(--transition);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow var(--transition);
+
 }
 .All {
    padding-top: 12px;
@@ -585,6 +599,7 @@ img {
     text-decoration: none; 
     display: block;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+    transition: box-shadow var(--transition);
 }
 
 .images-link:hover,
@@ -621,3 +636,47 @@ img {
  .link {
     text-decoration: none;
  }
+
+ /*--------modal window---------*/
+
+ .backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    background: rgba(46, 47, 66, 0.4);
+}
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 408px;
+    height: 576px;
+    background-color: #FCFCFC;
+    
+    
+}
+.madal-close-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: transparent;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    cursor: pointer;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
