--- a/style.css
+++ b/style.css
@@ -82,6 +82,19 @@ body{
     padding-top: 24px;
     padding-bottom: 24px; 
     transition: color var(--transition);
+    position: relative;
+
+}
+.header-link.active::after {
+    content: " ";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    background-color: var(--link-color);
+    border-radius: 2px;
+    left: 0;
+    bottom: 0;
+
 }
 
 
@@ -174,12 +187,11 @@ body{
     cursor: pointer;
     margin-top: 40px;
     border: 0;
-    transition-duration: background var(--transition);
-    transition: box-shadow var(--transition)
+    transition: box-shadow var(--transition), background-color var(--transition);
 }
 
 .button:hover {
-    background: #404BBF;
+    background-color: #404BBF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);;
 }
 
@@ -398,8 +410,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: border-color var(--transition);
-    transition: fill var(--transition);
+    transition: fill var(--transition), border-color var(--transition);
 }
 
 .custom-link:hover,
@@ -529,9 +540,8 @@ body{
     color: var(--logo-color);
     background: var(--logo-second-color);
     border: 1px solid #E7E9FC;
-    transition: background-color var(--transition);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: box-shadow var(--transition);
+    transition: box-shadow var(--transition), background-color var(--transition), color var(--transition) ;
+   
 
 }
 .All {
@@ -591,6 +601,9 @@ img {
 .images-item {
     width: 360px;
 }
+.images-item:hover .images-top-text {
+    transform: translateY(0%);
+}
 
 .images-item:nth-child(3n) {
     margin: right 24px;
@@ -600,7 +613,31 @@ img {
     display: block;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
     transition: box-shadow var(--transition);
+    position: relative;
 }
+.images-top-wrap {
+    position: relative;
+    overflow: hidden;
+}
+
+ .images-top-text {
+    position: absolute;
+    top: 0;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    color: #F4F4FD;
+    padding: 40px 32px 164px 32px;
+    background: #4D5AE5;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform var(--transition);
+    
+    
+
+ }
+
 
 .images-link:hover,
 .images-link:focus {
