--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ body{
     background-color: var(--link-color);
     border-radius: 2px;
     left: 0;
-    bottom: 0;
+    bottom: -1px;
 
 }
 
@@ -190,7 +190,8 @@ body{
     transition: box-shadow var(--transition), background-color var(--transition);
 }
 
-.button:hover {
+.button:hover,
+.button:focus {
     background-color: #404BBF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);;
 }
@@ -410,7 +411,11 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: fill var(--transition), border-color var(--transition);
+    transition: border-color var(--transition);
+}
+
+.custom-icon {
+    transition: fill var(--transition);
 }
 
 .custom-link:hover,
@@ -423,6 +428,7 @@ body{
 }
 .custom-icon {
    fill: #8E8F99;  
+    
 }
 
 /*--------------FOOTER--------------*/
@@ -540,7 +546,7 @@ body{
     color: var(--logo-color);
     background: var(--logo-second-color);
     border: 1px solid #E7E9FC;
-    transition: box-shadow var(--transition), background-color var(--transition), color var(--transition) ;
+    transition: box-shadow var(--transition), background-color var(--transition), color var(--transition), border-color var(--transition);
    
 
 }
@@ -693,7 +699,7 @@ img {
     
     
 }
-.madal-close-btn {
+.modal-close-btn {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -707,6 +713,19 @@ img {
     position: absolute;
     top: 24px;
     right: 24px;
+    transition: background-color var(--transition);
+}
+.custom-icon {
+    transition: fill var(--transition);
+}
+
+.modal-close-btn:hover, 
+.modal-close-btn:focus {
+    background-color: var(--link-color);
+}
+.modal-close-btn:hover .modal-btn-icon,
+.modal-close-btn:focus .modal-btn-icon {
+    fill: var(--button-color);
 }
 
 .backdrop.is-hidden {
