--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{
     --footer-color: #E7E9FC;
     --link-color: #404BBF;
     --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    --text-input: #8E8F99;
 }
 .container {
     width: 1158px;
@@ -31,8 +32,7 @@ body{
 .link {
     text-decoration: none;
 }
-.site-body {
-}
+
 
 /*---------HEADER------------*/
 
@@ -162,10 +162,8 @@ body{
     margin-left: auto;
 }
 
-.button-section {
 
-    
-}
+
 .section-under-btn {
     font-weight: 700;
     font-size: 56px;
@@ -221,17 +219,13 @@ body{
     margin: -1px;
 }
 
-.skills-name {
-}
 
 .under-skills-icon {
     display: flex;
     align-items: center;
     gap: 24px; 
 }
-.under-skills-item {
-    
-}
+
 
 .skills-icon-link {
    width: 264px;
@@ -252,9 +246,7 @@ body{
     display: flex;
     gap: 24px;
 }
-.skils-item {
 
-}
 
 .skills-title {
     font-weight: 700;
@@ -279,9 +271,7 @@ body{
     padding-bottom: 120px;
 }
 
-.design-portfolio {
 
-}
 .design {
     font-weight: 700;
     font-size: 36px;
@@ -465,10 +455,7 @@ body{
     color: var(--logo-second-color);
 
 }
-.footer-logo:hover,
-.footer-logo:focus {
 
-}
 .footer-text {
     font-size: 16px;
     line-height: calc(24/16);
@@ -521,8 +508,7 @@ body{
 .footer-soc-icon {
     fill: #FFFFFF;
 }
-.hero-soc-icon {
-}
+
 /*-----------------SECOND_PAGES-----------------*/
 .portfolio {
     padding-top: 96px;
@@ -535,8 +521,7 @@ body{
     margin-bottom: 72px;
     gap: 24px;
 }
-.second-btn-name {
-}
+
 .second-button {
     font-family: 'Roboto',sans-serif;
     font-style: normal;
@@ -591,8 +576,6 @@ body{
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.images {
-}
 
 img {
     display: block;
@@ -706,7 +689,8 @@ img {
     height: 576px;
     background-color: #FCFCFC;
     transition: opacity var(--transition), visibility var(--transition);
-    
+    padding: 72px 24px 24px 24px;
+    border-radius: 4px;
 }
 .modal-close-btn {
     display: flex;
@@ -740,4 +724,72 @@ img {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+}
+
+.modal-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: calc(24/16);
+    color: var(--text-color);
+    text-align: center;
+    margin-bottom: 16px;
+}
+
+.text-input {
+    display: inline-block;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: calc(16/12);
+    letter-spacing: 0.04em;
+    color: var(--text-input);
+}
+
+.modal-input {
+    width: 100%;
+    height: 40px;
+    background-color: transparent;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    color: var(--text-color);
+    padding-left: 38px;
+}
+
+.modal-input::placeholder {
+    font-size: 12px;
+    color: #404BBF;
+}
+
+
+
+.input-icon {
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 18px;
+    height: 18px;
+}
+
+.modal-field { 
+    width: 360px;
+    margin-bottom: 8px;
+}
+
+.input-wrap {
+    position: relative;
+}
+
+.modal-coment {
+    width: 100%;
+    height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    background-color: transparent;
+    outline: none;
+    resize: none;
+}
+
+.modal-coment::placeholder {
+    font-size: 12px;
+    padding: 8px 16px;
 }
