--- a/style.css
+++ b/style.css
@@ -509,6 +509,77 @@ body{
     fill: #FFFFFF;
 }
 
+.footer-subscribe {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    width: 453px;
+    height: 100%;
+    gap: 24px;
+}
+.subscribe {
+    
+}
+.subscribe-text-input {
+    display: flex;
+    padding-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: calc(24/16);
+    letter-spacing: 0.02em;
+    color: var(--footer-color);
+    background-color: transparent;
+    
+}
+.subscribe-input {
+    display: flex;
+    padding-left: 16px;
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: calc(24/12);
+    width: 264px;
+    height: 40px;
+    color: rgba(255, 255, 255, 0.6);
+    transition: border var(--transition), outline var(--transition)
+}
+
+.subscribe-input::placeholder {
+    font-size: 16px;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.subscribe-input:hover, 
+.subscribe-input:focus {
+    border: 1px solid #4D5AE5;
+    outline: transparent;
+}
+
+.button-subscribe {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row-reverse;
+    padding: 8px 24px;
+    background-color: var(--logo-color);
+    color: var(--button-color);
+    border-radius: 4px;
+    border: none;
+    gap: 16px;
+    cursor: pointer;
+    transition: box-shadow var(--transition), background-color var(--transition);
+}
+
+.button-subscribe:hover,
+.button-subscribe:focus {
+    background-color: #404BBF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+.subscribe-icon {
+}
+
 /*-----------------SECOND_PAGES-----------------*/
 .portfolio {
     padding-top: 96px;
@@ -681,6 +752,10 @@ img {
     background: rgba(46, 47, 66, 0.4);
 }
 .modal {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-around;
+    justify-content: center;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -732,7 +807,7 @@ img {
     line-height: calc(24/16);
     color: var(--text-color);
     text-align: center;
-    margin-bottom: 16px;
+    padding-bottom: 16px;
 }
 
 .text-input {
@@ -742,6 +817,7 @@ img {
     line-height: calc(16/12);
     letter-spacing: 0.04em;
     color: var(--text-input);
+
 }
 
 .modal-input {
@@ -752,14 +828,22 @@ img {
     border-radius: 4px;
     color: var(--text-color);
     padding-left: 38px;
+    transition: border var(--transition), outline var(--transition)
 }
 
+.modal-input:hover,
+.modal-input:focus {
+    border: 1px solid #4D5AE5;
+    outline: transparent;
+}
+.modal-input:hover+.input-icon,
+.modal-input:focus+.input-icon {
+    fill: #4D5AE5;
+}
 .modal-input::placeholder {
     font-size: 12px;
-    color: #404BBF;
+    fill: #404BBF;
 }
-
-
 
 .input-icon {
     position: absolute;
@@ -768,16 +852,19 @@ img {
     transform: translateY(-50%);
     width: 18px;
     height: 18px;
+    fill: #2E2F42;
+    transition: fill var(--transition);
 }
 
 .modal-field { 
     width: 360px;
-    margin-bottom: 8px;
+    padding-bottom: 8px;
 }
 
 .input-wrap {
     position: relative;
 }
+
 
 .modal-coment {
     width: 100%;
@@ -792,4 +879,69 @@ img {
 .modal-coment::placeholder {
     font-size: 12px;
     padding: 8px 16px;
+}
+
+.check-text {
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+}
+
+.check-text::before {
+    content: " ";
+    width: 16px;
+    height: 16px;
+    border: 2px solid #2E2F42;
+    border-radius: 4px;
+    display: block;
+    margin-right: 8px;
+}
+
+.privacy-check-text {
+    color: var(--logo-color);
+    display: flex;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    align-items: center;
+    margin-left: 3px;
+    letter-spacing: 0.04em;
+}
+
+.input-check:checked + .check-text::before {
+    background-color: var(--link-color);
+    border: none;
+    background-image: url(./images/Chek-icon.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.modal-input-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.modal-btn {
+    font-family: 'Roboto',sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: calc(24/16);
+    letter-spacing: 0.04em;
+    color:var(--button-color);
+    padding: 16px 32px;
+    background: var(--logo-color);
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 24px;
+    margin-bottom: 24px;
+    border: 0;
+    width: 169px;
+    height: 56px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    transition: box-shadow var(--transition), background-color var(--transition);
+}
+.modal-btn:hover,
+.modal-btn:focus {
+    background-color: #404BBF;
 }
