--- a/style.css
+++ b/style.css
@@ -432,14 +432,12 @@ body{
 }
 .icon-footer {
     display: flex;
-    gap: 120px;
 
 }
 
 .footer-container {
     width: 264px;
-    height: 110px;
-
+    margin-right: 120px;
 }
 .web {
     color: var(--logo-color);
@@ -466,7 +464,7 @@ body{
 }
 .social-container {
     width: 208px;
-    height: 80px;
+    margin-right: 80px;
 }
 .footer-social {
     font-weight: 500;
@@ -515,7 +513,6 @@ body{
     align-items: flex-end;
     width: 453px;
     height: 100%;
-    gap: 24px;
 }
 .subscribe {
     
@@ -529,8 +526,13 @@ body{
     letter-spacing: 0.02em;
     color: var(--footer-color);
     background-color: transparent;
-    
 }
+
+.subscribe-button-input {
+    display: flex;
+    gap: 24px;
+}
+
 .subscribe-input {
     display: flex;
     padding-left: 16px;
@@ -538,12 +540,13 @@ body{
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
     font-weight: 400;
-    font-size: 12px;
-    line-height: calc(24/12);
+    font-size: 16px;
+    line-height: calc(24/16);
+    letter-spacing: 0.02em;
     width: 264px;
     height: 40px;
     color: rgba(255, 255, 255, 0.6);
-    transition: border var(--transition), outline var(--transition)
+    transition: border var(--transition), outline var(--transition);
 }
 
 .subscribe-input::placeholder {
@@ -561,7 +564,6 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row-reverse;
     padding: 8px 24px;
     background-color: var(--logo-color);
     color: var(--button-color);
@@ -748,12 +750,9 @@ img {
     width: 100%;
     height: 100%;
     background: rgba(46, 47, 66, 0.4);
+    opacity: 1;
 }
 .modal {
-    display: flex;
-    flex-wrap: wrap;
-    align-content: space-around;
-    justify-content: center;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -761,9 +760,9 @@ img {
     width: 408px;
     height: 576px;
     background-color: #FCFCFC;
-    transition: opacity var(--transition), visibility var(--transition);
     padding: 72px 24px 24px 24px;
     border-radius: 4px;
+    transition: opacity var(--transition), visibility var(--transition);
 }
 .modal-close-btn {
     display: flex;
@@ -772,7 +771,7 @@ img {
     width: 24px;
     height: 24px;
     border-radius: 50%;
-    background-color: transparent;
+    background-color: #E7E9FC;
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 0;
     cursor: pointer;
@@ -803,30 +802,51 @@ img {
     font-weight: 500;
     font-size: 16px;
     line-height: calc(24/16);
+    letter-spacing: 0.02em;
     color: var(--text-color);
     text-align: center;
-    padding-bottom: 16px;
+    margin-bottom: 14px;
 }
 
-.text-input {
-    display: inline-block;
+.modal-label {
+    display: block;
+    margin-bottom: 4px;
+}
+.modal-label-text {
+    font-style: normal;
     font-weight: 400;
     font-size: 12px;
-    line-height: calc(16/12);
-    letter-spacing: 0.04em;
+    line-height: 14px;
+    letter-spacing: 0.01em;
     color: var(--text-input);
-
+    margin-bottom: 4px;
 }
-
+.input-wrap {
+    position: relative;
+}
 .modal-input {
     width: 100%;
     height: 40px;
-    background-color: transparent;
-    border: 1px solid rgba(33, 33, 33, 0.2);
+    border: 1px solid rgba(33, 33, 33, 0.2);    
     border-radius: 4px;
-    color: var(--text-color);
     padding-left: 38px;
-    transition: border var(--transition), outline var(--transition)
+    transition:  border var(--transition), outline var(--transition);
+}
+
+.modal-input-icon {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translate(0,-50%);
+    display: block;
+    width: 18px;
+    height: 24px;
+    margin-left: 16px;
+    transition: fill var(--transition);
+}
+.input-icon {
+    width: 18px;
+    height: 24px;
 }
 
 .modal-input:hover,
@@ -834,55 +854,63 @@ img {
     border: 1px solid #4D5AE5;
     outline: transparent;
 }
-.modal-input:hover+.input-icon,
-.modal-input:focus+.input-icon {
+.modal-input:hover+.modal-input-icon,
+.modal-input:focus+.modal-input-icon {
     fill: #4D5AE5;
 }
-.modal-input::placeholder {
+
+.modal-label-comment {
+    display: block;
+    margin-bottom: 16px;
+}
+
+.modal-label-text {
+    font-style: normal;
+    font-weight: 400;
     font-size: 12px;
-    fill: #404BBF;
+    line-height: 14px;
+    letter-spacing: 0.01em;
+    color: #8E8F99;
+    margin-bottom: 4px;
 }
 
-.input-icon {
-    position: absolute;
-    left: 16px;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 18px;
-    height: 18px;
-    fill: #2E2F42;
-    transition: fill var(--transition);
-}
-
-.modal-field { 
-    width: 360px;
-    padding-bottom: 8px;
-}
-
-.input-wrap {
-    position: relative;
-}
-
-
-.modal-coment {
+.modal-textarea {
+    display: block;
     width: 100%;
     height: 120px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    background-color: transparent;
-    outline: none;
+    padding: 8px 8px 8px 16px;
     resize: none;
+    background: transparent;
+    transition: border var(--transition), outline var(--transition);
 }
 
-.modal-coment::placeholder {
+.modal-textarea:hover,
+.modal-textarea:focus {
+    border: 1px solid #4D5AE5;
+    outline: transparent;
+}
+
+.modal-textarea::placeholder {
+    font-weight: 400;
     font-size: 12px;
-    padding: 8px 16px;
+    line-height: calc(16/12);
 }
 
 .check-text {
-    font-size: 12px;
     display: flex;
-    align-items: center;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.04em;
+    color: #757575;
+    margin-top: 16px;
+    margin-bottom: 24px;
+}
+
+.privacy {
+    margin-left: 4px;
 }
 
 .check-text::before {
@@ -916,11 +944,10 @@ img {
 
 .modal-input-btn {
     display: flex;
-    justify-content: center;
-    align-items: center;
-
 }
 .modal-btn {
+    display: flex;
+    justify-content: center;
     font-family: 'Roboto',sans-serif;
     font-weight: 500;
     font-size: 16px;
@@ -931,11 +958,10 @@ img {
     background: var(--logo-color);
     border-radius: 4px;
     cursor: pointer;
-    margin-top: 24px;
-    margin-bottom: 24px;
     border: 0;
     width: 169px;
     height: 56px;
+    margin: 0 auto;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     transition: box-shadow var(--transition), background-color var(--transition);
 }
