--- a/style.css
+++ b/style.css
@@ -509,8 +509,9 @@ body{
 
 .footer-subscribe {
     display: flex;
-    justify-content: center;
+    
     align-items: flex-end;
+    flex-wrap: wrap;
     width: 453px;
     height: 100%;
 }
@@ -518,14 +519,12 @@ body{
     
 }
 .subscribe-text-input {
-    display: flex;
-    padding-bottom: 16px;
+    margin-bottom: 16px;
     font-weight: 500;
     font-size: 16px;
     line-height: calc(24/16);
     letter-spacing: 0.02em;
     color: var(--footer-color);
-    background-color: transparent;
 }
 
 .subscribe-button-input {
@@ -564,6 +563,10 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: calc(24/16);
+    letter-spacing: 0.04em;
     padding: 8px 24px;
     background-color: var(--logo-color);
     color: var(--button-color);
@@ -753,12 +756,13 @@ img {
     opacity: 1;
 }
 .modal {
+    display: block;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 408px;
-    height: 576px;
+    min-height: 576px;
     background-color: #FCFCFC;
     padding: 72px 24px 24px 24px;
     border-radius: 4px;
@@ -810,9 +814,10 @@ img {
 
 .modal-label {
     display: block;
-    margin-bottom: 4px;
+    margin-bottom: 8px;
 }
 .modal-label-text {
+    display: block;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
