--- a/mobile.css
+++ b/mobile.css
@@ -23,6 +23,9 @@
 .section-btn {
     width: 100%;
 }
+.section-under-btn {
+    width: 320px;
+}
 /*--------------------------------------------portfolio----------------------------------------------------*/
 .portfolio{
     width: 100%;
