--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@ body{
     text-align: center;
     letter-spacing: 0.02em;
     color: var(--button-color);
-    width: 320px;
+    width: 100%;
     /*width: 496px;*/
     margin-left: auto;
     margin-right: auto;
@@ -315,6 +315,7 @@ body{
     background-color: #404BBF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);;
 }
+
 
 /*--------------------------------------------------skills-----------------------------------------------------*/
 
@@ -643,8 +644,9 @@ body{
     justify-content: center;
     align-items: flex-end;
     flex-wrap: wrap;*/
-    width: 396px;
+    min-width: 100%;
     height: 100%;
+
 }
 .subscribe-text-input {
     margin-bottom: 16px;
