--- a/style.css
+++ b/style.css
@@ -214,9 +214,8 @@ body{
     color: #2E2F42;
     margin-bottom: 24px;
 }
-.mob-header-link:hover,
-.mob-header-link:focus {
-    color: var(--link-color);
+.mob-active {
+    color: #404BBF;
 }
 .mob-header-contacts {
     display: flex;
@@ -232,27 +231,20 @@ body{
     letter-spacing: 0.02em;
     color: #434455;
 }
-.mob-header-mail:hover, 
-.mob-header-mail:focus {
-    color: var(--logo-color);
-}
-.mob-header-tel:hover,
-.mob-header-tel:focus {
-    color: var(--logo-color);
-}
+
 .mob-header-tel {
     font-weight: 600;
     font-size: 36px;
     line-height: 40px;
     text-transform: capitalize;
-    color: #434455;
+    color: #404BBF;
 }
 
 .mob-soc-list {
     display: flex;
-    justify-content: center;
-    gap: 56px;
+    justify-content: space-between;
     margin-top: 48px;
+    width: 100%;
 }
 
 
@@ -263,8 +255,6 @@ body{
     text-align: center;
     padding-top: 112px;
     padding-bottom: 112px;
-    /*padding-top: 188px;
-    padding-bottom: 188px;*/
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)),url(./images/Dark-bg-mob.jpg);
     background-repeat: no-repeat;
     background-position: center;
@@ -284,13 +274,10 @@ body{
     font-weight: 700;
     font-size: 36px;
     line-height: calc(40/36);
-    /*font-size: 56px;
-    line-height: calc(60/56);*/
     text-align: center;
     letter-spacing: 0.02em;
     color: var(--button-color);
-    width: 100%;
-    /*width: 496px;*/
+    min-width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -299,7 +286,6 @@ body{
     font-weight: 500;
     font-size: 16px;
     line-height: calc(24/16);
-    /*line-height: calc(19/16);*/
     letter-spacing: 0.04em;
     color:var(--button-color);
     padding: 16px 32px;
@@ -316,14 +302,13 @@ body{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);;
 }
 
-
 /*--------------------------------------------------skills-----------------------------------------------------*/
 
 .skills {
     /*padding-top: 120px;
     padding-bottom: 120px;*/
     padding-top: 96px;
-    padding-bottom: 288px;
+    padding-bottom: 96px;
 }
 .visually-hidden {
     position: absolute;
@@ -340,7 +325,7 @@ body{
 .under-skills-icon {
     display: flex;
     align-items: center;
-    gap: 24px; 
+    gap: 72px; 
 }
 .skills-icon-link {
    width: 264px;
@@ -357,18 +342,16 @@ body{
     height: 112px;
 }
 .diligence {
-   display: none;
+
 }
 .skills-list {
     display: flex;
-    gap: 24px;
+    gap: 72px;
     flex-wrap: wrap;
     justify-content: center;
 }
 .skills-title {
     font-weight: 700;
-    /*font-size: 20px;
-    line-height: calc(24/20);*/
     letter-spacing: 0.02em;
     color: var(--text-head);
     margin-bottom: 8px;
@@ -382,7 +365,6 @@ body{
     line-height: calc(24/16);
     letter-spacing: 0.02em;
     color: var(--text-color);
-    /*width: 264px;*/
     width: 100%;
 }
 
@@ -551,9 +533,6 @@ body{
     padding-bottom: 96px;
 }
 .icon-footer {
-    /*display: flex;
-    flex-wrap: wrap;
-    justify-content: center;*/
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -563,14 +542,11 @@ body{
     margin-left: auto;
     margin-right: auto;
     width: 268px;
-    /*margin-right: 120px;*/
 }
 .web {
     color: var(--logo-color);
 }
 .footer-logo {
-    /*display: flex;
-    justify-content: center;*/
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -596,7 +572,6 @@ body{
     margin-left: auto;
     margin-right: auto;
     width: 208px;
-    /*margin-right: 80px;*/
     margin-top: 72px;
 }
 .footer-social {
@@ -616,7 +591,6 @@ body{
 .footer-soc-item {
     width: 40px;
     height: 40px;
-    /*margin-top: 8px;*/
 }
 .footer-soc-link {
     width: 100%;
@@ -640,17 +614,12 @@ body{
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    /*display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    flex-wrap: wrap;*/
-    min-width: 100%;
+    width: 100%;
     height: 100%;
-
 }
 .subscribe-text-input {
     margin-bottom: 16px;
-    margin-top: 72px;
+    padding-top: 72px;
     font-weight: 500;
     font-size: 16px;
     line-height: calc(24/16);
