--- a/tablet.css
+++ b/tablet.css
@@ -5,9 +5,6 @@
 .footer {
     width: 100%;
 }
-.footer-logo {
-    display: flex;
-}
 .icon-footer {
     display: flex;
     flex-wrap: wrap;
@@ -17,6 +14,9 @@
     width: 264px;
     margin-right: 24px;
     margin-left: 0; 
+}
+.footer-social {
+    text-align: start;
 }
 .icon-footer {
     padding-left: 108px;
@@ -29,9 +29,6 @@
    margin-right: 0;
 }
 .footer-subscribe {
-    display: flex;
-    align-items: flex-end;
-    flex-wrap: wrap;
     width: 453px;
     height: 100%;
     margin-left: 0;
@@ -70,6 +67,9 @@
     padding-top: 96px;
     padding-bottom: 96px;
 }
+.skills-list {
+    row-gap: 72px;
+}
 .diligence {
     display: flex;
     flex-direction: column;
@@ -100,7 +100,7 @@
 .section-under-btn {
     font-size: 56px;
     line-height: calc(60/56);
-    width: 496px;
+    width: 396px;
 }
 .button {
     margin-top: 40px;
@@ -183,16 +183,12 @@
     gap: 40px;
 }
 .header-mail {
-    /*font-size: 16px;
-    line-height: calc(24/16);
-    letter-spacing: 0.02em;*/
     font-weight: 400;
     font-size: 12px;
     line-height: calc(16/12);
     letter-spacing: 0.04em;
     color: var(--text-color);
     display: block;
-    padding-top: 24px;
     padding-bottom: 0;
     transition: color var(--transition);
 }
@@ -201,9 +197,6 @@
     color: var(--link-color);
 }
 .header-tel {
-    /*font-size: 16px;
-    line-height: calc(24/16);
-    letter-spacing: 0.02em;*/
     font-weight: 400;
     font-size: 12px;
     line-height: 16px;
@@ -211,8 +204,8 @@
     color: var(--text-color);
     display: block;
     padding-top: 0;
-    padding-bottom: 10px;
     transition: color var(--transition);
+    margin-top: 4px;
 }
 .header-tel:hover,
 .header-tel:focus {
