--- a/mobile.css
+++ b/mobile.css
@@ -31,8 +31,15 @@
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)),url(./images/Dark-bg-mob-x2.jpg);
   }
 }
+.section-under-btn {
+    width: 320px;
+}
 /*--------------------------------------------portfolio----------------------------------------------------*/
 .portfolio{
     width: 100%;
+}
+/*--------------------------------------------soc-list----------------------------------------------------*/
+.mob-soc-list {
+    gap: 56px;
 }
 }
