--- a/desckstop.css
+++ b/desckstop.css
@@ -11,6 +11,9 @@
 .footer > .container {
     width: 1158px;
 }
+.footer-logo {
+    text-align: start;
+}
 .icon-footer {
     width: 100%;
     display: flex;
@@ -57,7 +60,7 @@
     gap: 24px;
 }
 .subscribe-text-input {
-    margin-top: 0;
+    padding-top: 0;
     text-align: start;
 }
 .subscribe-input {
@@ -105,11 +108,17 @@
     padding-top: 120px;
     padding-bottom: 120px;
 }
+
+.skills-list {
+    gap: 24px;
+}
+.skills-after-title {
+    width: 264px;
+}
 .skills-icon-link {
     display: flex;
 }
 .skills-after-title {
-    width: 264px;
     font-weight: 400;
 }
 .skills-title {
@@ -132,6 +141,7 @@
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)),url(./images/people-office-2x.jpg);
   }
 }
+
 /*--------------------------------------------section-header----------------------------------------------------*/
 .main-header {
     display: flex;
@@ -188,4 +198,23 @@
     text-align: center;
     padding-bottom: 120px;
 }
+/*--------------------------------------------design----------------------------------------------------*/
+.portfolio > .cotainer {
+    width: 100%;
+}
+/*--------------------------------------------portfolio----------------------------------------------------*/
+.portfolio {
+    padding-top: 96px;
+    padding-bottom: 96px;
+    width: 1158px;
+}
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+.images-item {
+    width: calc((100%-24px) / 4);
+}
+
 }
