--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@ body{
     text-align: center;
     letter-spacing: 0.02em;
     color: var(--button-color);
-    min-width: 100%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -424,6 +424,11 @@ body{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 0px 0px 4px 4px;
 }
+.hero-images {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
 .hero-image-skills {
     display: flex;
     gap: 24px;   
@@ -548,8 +553,6 @@ body{
 }
 .footer-logo {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
     text-align: center;
     font-family: 'Raleway';
     font-style: normal;
