--- a/desckstop.css
+++ b/desckstop.css
@@ -187,6 +187,7 @@
     letter-spacing: 0.02em;
     color: var(--text-color);
     display: block;
+    margin: 0 auto;
     padding-top: 24px;
     padding-bottom: 24px;
     transition: color var(--transition);
