--- a/desckstop.css
+++ b/desckstop.css
@@ -76,6 +76,7 @@
 
 /*--------------------------------------------custom----------------------------------------------------*/
 .custom > .container{
+    width: 1158px;
     padding-left: 15px;
     padding-right: 15px;
 }
