--- a/style.css
+++ b/style.css
@@ -544,6 +544,7 @@ body{
 }
 .footer-container {
     display: block;
+    text-align: center;
     margin-left: auto;
     margin-right: auto;
     width: 268px;
