--- a/mobile.css
+++ b/mobile.css
@@ -35,11 +35,15 @@
     width: 320px;
 }
 /*--------------------------------------------portfolio----------------------------------------------------*/
-.portfolio{
-    width: 100%;
+.portfolio > .container {
+    width: 458px;
 }
 /*--------------------------------------------soc-list----------------------------------------------------*/
 .mob-soc-list {
     gap: 56px;
+}
+/*--------------------------------------------modal----------------------------------------------------*/
+.modal {
+    width: 392px;
 }
 }
