--- a/tablet.css
+++ b/tablet.css
@@ -9,6 +9,7 @@
 .icon-footer {
     display: flex;
     flex-wrap: wrap;
+    width: 582px;
 }
 .footer-container {
     display: block;
@@ -21,8 +22,9 @@
     text-align: start;
 }
 .icon-footer {
-    padding-left: 108px;
-    padding-right: 156px;
+    
+    /*padding-left: 108px;
+    padding-right: 156px;*/
 }
 .social-container {
    width: 208px;
@@ -48,7 +50,7 @@
 
 /*--------------------------------------------custom-------------------------------------------*/
 .custom > .container {
-   width: 552px;
+   width: 582px;
 }
 .custom-list {
     row-gap: 72px; 
@@ -57,8 +59,9 @@
    width: calc((100% - 48px) / 3);
 }
 /*--------------------------------------------hero----------------------------------------------------*/
-.hero {
-    width: 100%;
+
+.hero > .container {
+    width: 582px;
     padding-top: 104px;
     padding-bottom: 104px;
 }
@@ -143,7 +146,7 @@
     margin-left: auto;
     margin-right: 120px;
     padding-top: 24px;
-    padding-bottom: 22px;
+    padding-bottom: 24px;
 }
 .header-list {
     gap: 40px;
@@ -157,7 +160,7 @@
     color: var(--text-head);
     display: block;
     padding-top: 24px;
-    padding-bottom: 22px; 
+    padding-bottom: 24px; 
     transition: color var(--transition);
     position: relative;
 }
@@ -217,14 +220,33 @@
     color: var(--link-color);
 }
 /*--------------------------------------------portfolio----------------------------------------------------*/
+.portfolio > .container {
+    width: 768px;
+}
 .portfolio {
     padding-top: 64px;
     padding-bottom: 64px;
 }
-.second-btn {
-    justify-content: center;
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
 .images-item {
-    width: calc((100%-24px) / 3);
+    width: 356px;
+}
+.images-list {
+    display: flex;
+    background: #FFFFFF;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+.images-item:nth-child(2n) {
+    margin: right 24px;
+}
+.second-btn {
+    flex-wrap: wrap;
+    justify-content: center;
 }
 }
