--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ body{
     letter-spacing: 0.02em;
     color: var(--text-color);
     display: block;
-    padding-top: 24px;
+    /*padding-top: 24px;*/
     padding-bottom: 24px;
     transition: color var(--transition);
 }
@@ -131,7 +131,7 @@ body{
     color: var(--text-color);
     display: block;
     padding-top: 24px;
-    padding-bottom: 24px;
+    /*padding-bottom: 24px;*/
     transition: color var(--transition);
 }
 .header-tel:hover,
@@ -305,8 +305,6 @@ body{
 /*--------------------------------------------------skills-----------------------------------------------------*/
 
 .skills {
-    /*padding-top: 120px;
-    padding-bottom: 120px;*/
     padding-top: 96px;
     padding-bottom: 96px;
 }
@@ -391,8 +389,6 @@ body{
 
 .hero {
     background-color: var(--logo-second-color);
-    /*padding-top: 120px;
-    padding-bottom: 120px;*/
     padding-top: 96px;
     padding-bottom: 96px;
 }
@@ -409,7 +405,6 @@ body{
 .hero-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     gap: 72px;
 }
 .hero-box {
@@ -423,6 +418,8 @@ body{
     justify-content: space-between;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 0px 0px 4px 4px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .hero-images {
     display: block;
@@ -564,6 +561,7 @@ body{
     color: var(--logo-second-color);
 }
 .footer-text {
+    text-align: start;
     font-size: 16px;
     line-height: calc(24/16);
     letter-spacing: 0.02em;
@@ -619,10 +617,10 @@ body{
     text-align: center;
     width: 100%;
     height: 100%;
+    margin-top: 72px;
 }
 .subscribe-text-input {
     margin-bottom: 16px;
-    padding-top: 72px;
     font-weight: 500;
     font-size: 16px;
     line-height: calc(24/16);
@@ -747,10 +745,12 @@ body{
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .images-list {
+    min-width: 320px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     background: #FFFFFF;
-    flex-wrap: wrap;
+    
     column-gap: 24px;
     row-gap: 48px;
 }
@@ -766,7 +766,7 @@ body{
 }
 .images-link {
     text-decoration: none; 
-    display: block;
+    
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
     transition: box-shadow var(--transition);
     position: relative;
@@ -843,7 +843,7 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 408px;
+    width: 100%;
     min-height: 576px;
     background-color: #FCFCFC;
     padding: 72px 24px 24px 24px;
